# facial-expression-recognition-application

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
scripts/: api_test.py  embedded.json
src/: __init__.py  main.py  ml_classifier.py  utils.py
