[tool.poetry]
name = "fer"
version = "0.2.0"
description = ""
authors = ["Samuel Oliveira <patriciosamuel097@gmail.com>"]
license = "Science Code"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pybind11 = "^2.13.6"    
opencv-python = "^4.11.0.86"
numpy = "^1.26.4"
